Fixed content jumping around under header.

--- a/src/base.scss
+++ b/src/base.scss
@@ -11,7 +11,6 @@
 
 html, body {
   min-height: 100%;
-  height: inherit !important;
   top: 0 !important;
 }
 
